# spotmaps-pipeline

./: .gitignore  CHANGELOG.md  README.md  cspell.json  pyproject.toml  spotmaps.bat
files/input/: README.md
files/output/: log.txt  processedFiles.txt
files/output/json/: README.md
files/output/thumbnails/: README.md
files/output/tifs/: README.md
src/: _check.py  file.py  format.py  getList.py  iterateFilmFiles.py  list.py  main.py  process.py  spotmaps.py
src/getSpotmapsList/: buildFileList.py  getSpotmapsList.bat  getSpotmapsList.py  removeSpotmapsList.py
src/processFilms/: processFilms.bat  processFilms.py
