[tool.poetry]
name = "spotmaps-pipeline"
version = "0.1.0"
description = ""
authors = ["Andy Willis <awillis@fastmail.fm>"]
readme = "README.md"
packages = [{include = "spotmaps_pipeline"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
