[tool.poetry]
name = "spotmaps-pipeline"
version = "0.1.0"
description = ""
authors = ["Andy Willis <awillis@fastmail.fm>"]
readme = "README.md"
packages = [{include = "spotmaps_pipeline"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.3.0"
numpy = "^1.24.1"
opencv-python = "^4.7.0.68"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
