[tool.poetry]
name = "spotmaps-pipeline"
version = "2.0.0"
description = "Spotmaps pipeline"
authors = "Andy Willis"
readme = "README.md"
packages = [{include = "spotmaps_pipeline"}]

[tool.poetry.dependencies]
python = "^3.11"
pillow = "^9.3.0"
numpy = "^1.24.1"
opencv-python = "^4.7.0.68"

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
black = "^22.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
